# agent-trader

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/posts/: test_crypto.parquet  test_one.parquet  test_signals.parquet
data/proxy_snapshots/: allPerpMetas.json  meta.json  spotMeta.json
data/results/: 06c8370b26c2.html  17ec3d54a70f.html  1a36fb8a3c05.html  5acee0553237.html  67341b7d6d0e.html  784795e99b0f.html  88139d6226f0.html  beae04e9cde3.html  d56df69d4195.html  fca6a7a306ed.html
docs/: api-data-retention.csv  mitm.md  weave-api.md
scripts/: collect_snapshots.py  fetch_gdelt_news.py  fetch_weave_trace.py  prefetch_candles.py
src/agent_trader/: config.py  constants.py  main.py
src/agent_trader/agent/: prompts.py  tool.py
src/agent_trader/backtest/: engine.py  evaluator.py
src/agent_trader/data/: bybit.py  cache.py  market.py  news.py  posts.py  s3_fills.py
src/agent_trader/models/: outcome.py  post.py  recommendation.py
src/agent_trader/proxy/: addon.py
src/agent_trader/reporting/: html_report.py  template.html
tests/unit/: test_bybit.py  test_cache.py  test_cache_extended.py  test_market.py  test_posts.py  test_s3_fills.py
